# AIRP

./: .env.sample  .gitignore  package-lock.json  package.json  remove.cmd
app/: layout.js  page.js
app/api/chat/: route.js
data/: 20240819_tpd.json  20240822_tpd_small.json
docs/: CODEOWNERS
rag/: main.py  pyproject.toml  requirements.txt
